--- a/components/teasercard.module.css
+++ b/components/teasercard.module.css
@@ -8,6 +8,7 @@
   width: 60%;
   border-radius: 15px;
   margin-bottom: 3.25rem;
+  padding:32px;
 }
 
 .card .top_container {   
